--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <span class="material-icons text-2xl" style="color: var(--primary);">sports_esports</span>
                 </div>
                 <div>
-                    <h1 class="orbitron text-2xl font-black tracking-widest" style="color: var(--primary);">ONLINE-FIX <span class="text-[10px] text-pink-400">.SYSTEM</span></h1>
+                    <h1 class="orbitron text-2xl font-black tracking-widest" style="color: var(--primary);">ONLINE-FIX <span class="text-[10px] text-pink-400">vercel.app</span></h1>
                     <div class="flex items-center gap-2">
                         <span class="w-2 h-2 rounded-full bg-green-500 status-indicator"></span>
                         <span class="text-[8px] mono text-zinc-500 uppercase tracking-tighter">Système de clés actif</span>
